parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> exp
Rule 2     exp -> definition
Rule 3     exp -> value_exp
Rule 4     exp -> if_stmt
Rule 5     exp -> log_exp
Rule 6     exp -> print_exp
Rule 7     exp -> exp exp
Rule 8     print_exp -> LPAREN PRINT exp RPAREN
Rule 9     read_exp -> READ
Rule 10    number -> NUM
Rule 11    log_val -> TRUE
Rule 12    log_val -> FALSE
Rule 13    identifier -> IDENTIFIER
Rule 14    definition -> LPAREN DEFINE identifier value_exp RPAREN
Rule 15    definition -> LPAREN DEFINE identifier LPAREN arguments RPAREN LPAREN exp RPAREN RPAREN
Rule 16    arguments -> declaration arguments
Rule 17    arguments -> <empty>
Rule 18    declaration -> identifier
Rule 19    if_stmt -> LPAREN IF log_exp LPAREN exp RPAREN RPAREN
Rule 20    if_stmt -> LPAREN IF log_exp LPAREN exp RPAREN LPAREN exp RPAREN RPAREN
Rule 21    log_exp -> value
Rule 22    log_exp -> value_exp
Rule 23    log_exp -> LPAREN log_operator log_exp log_args RPAREN
Rule 24    log_args -> log_exp log_args
Rule 25    log_args -> log_exp
Rule 26    log_args -> <empty>
Rule 27    log_operator -> AND
Rule 28    log_operator -> OR
Rule 29    log_operator -> NOT
Rule 30    log_operator -> EQUAL
Rule 31    log_operator -> GT
Rule 32    log_operator -> LT
Rule 33    value_exp -> LPAREN operator value_exp args RPAREN
Rule 34    value_exp -> func_exp
Rule 35    func_exp -> LPAREN function args RPAREN
Rule 36    function -> identifier
Rule 37    args -> value_exp args
Rule 38    args -> value_exp
Rule 39    args -> <empty>
Rule 40    value_exp -> value
Rule 41    value -> identifier
Rule 42    value -> NIL
Rule 43    value -> number
Rule 44    value -> log_val
Rule 45    value -> list
Rule 46    value -> list_car
Rule 47    value -> read_exp
Rule 48    list_car -> LPAREN CAR identifier RPAREN
Rule 49    list_car -> LPAREN CAR list RPAREN
Rule 50    list_car -> LPAREN CAR list_car RPAREN
Rule 51    list -> LPAREN CDR identifier RPAREN
Rule 52    list -> LPAREN CDR list RPAREN
Rule 53    list -> LPAREN CONS args RPAREN
Rule 54    list -> STRING
Rule 55    operator -> PLUS
Rule 56    operator -> MINUS
Rule 57    operator -> DIVIDE
Rule 58    operator -> MULTIPLY
Rule 59    operator -> MOD

Terminals, with rules where they appear

AND                  : 27
CAR                  : 48 49 50
CDR                  : 51 52
CONS                 : 53
DEFINE               : 14 15
DIVIDE               : 57
EQUAL                : 30
FALSE                : 12
GT                   : 31
IDENTIFIER           : 13
IF                   : 19 20
LPAREN               : 8 14 15 15 15 19 19 20 20 20 23 33 35 48 49 50 51 52 53
LT                   : 32
MINUS                : 56
MOD                  : 59
MULTIPLY             : 58
NIL                  : 42
NOT                  : 29
NUM                  : 10
OR                   : 28
PLUS                 : 55
PRINT                : 8
READ                 : 9
RPAREN               : 8 14 15 15 15 19 19 20 20 20 23 33 35 48 49 50 51 52 53
STRING               : 54
TRUE                 : 11
error                : 

Nonterminals, with rules where they appear

args                 : 33 35 37 53
arguments            : 15 16
declaration          : 16
definition           : 2
exp                  : 1 7 7 8 15 19 20 20
func_exp             : 34
function             : 35
identifier           : 14 15 18 36 41 48 51
if_stmt              : 4
list                 : 45 49 52
list_car             : 46 50
log_args             : 23 24
log_exp              : 5 19 20 23 24 25
log_operator         : 23
log_val              : 44
number               : 43
operator             : 33
print_exp            : 6
program              : 0
read_exp             : 47
value                : 21 40
value_exp            : 3 14 22 33 37 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . exp
    (2) exp -> . definition
    (3) exp -> . value_exp
    (4) exp -> . if_stmt
    (5) exp -> . log_exp
    (6) exp -> . print_exp
    (7) exp -> . exp exp
    (14) definition -> . LPAREN DEFINE identifier value_exp RPAREN
    (15) definition -> . LPAREN DEFINE identifier LPAREN arguments RPAREN LPAREN exp RPAREN RPAREN
    (33) value_exp -> . LPAREN operator value_exp args RPAREN
    (34) value_exp -> . func_exp
    (40) value_exp -> . value
    (19) if_stmt -> . LPAREN IF log_exp LPAREN exp RPAREN RPAREN
    (20) if_stmt -> . LPAREN IF log_exp LPAREN exp RPAREN LPAREN exp RPAREN RPAREN
    (21) log_exp -> . value
    (22) log_exp -> . value_exp
    (23) log_exp -> . LPAREN log_operator log_exp log_args RPAREN
    (8) print_exp -> . LPAREN PRINT exp RPAREN
    (35) func_exp -> . LPAREN function args RPAREN
    (41) value -> . identifier
    (42) value -> . NIL
    (43) value -> . number
    (44) value -> . log_val
    (45) value -> . list
    (46) value -> . list_car
    (47) value -> . read_exp
    (13) identifier -> . IDENTIFIER
    (10) number -> . NUM
    (11) log_val -> . TRUE
    (12) log_val -> . FALSE
    (51) list -> . LPAREN CDR identifier RPAREN
    (52) list -> . LPAREN CDR list RPAREN
    (53) list -> . LPAREN CONS args RPAREN
    (54) list -> . STRING
    (48) list_car -> . LPAREN CAR identifier RPAREN
    (49) list_car -> . LPAREN CAR list RPAREN
    (50) list_car -> . LPAREN CAR list_car RPAREN
    (9) read_exp -> . READ

    LPAREN          shift and go to state 8
    NIL             shift and go to state 12
    IDENTIFIER      shift and go to state 18
    NUM             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    READ            shift and go to state 23

    program                        shift and go to state 1
    exp                            shift and go to state 2
    definition                     shift and go to state 3
    value_exp                      shift and go to state 4
    if_stmt                        shift and go to state 5
    log_exp                        shift and go to state 6
    print_exp                      shift and go to state 7
    identifier                     shift and go to state 9
    func_exp                       shift and go to state 10
    value                          shift and go to state 11
    number                         shift and go to state 13
    log_val                        shift and go to state 14
    list                           shift and go to state 15
    list_car                       shift and go to state 16
    read_exp                       shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> exp .
    (7) exp -> exp . exp
    (2) exp -> . definition
    (3) exp -> . value_exp
    (4) exp -> . if_stmt
    (5) exp -> . log_exp
    (6) exp -> . print_exp
    (7) exp -> . exp exp
    (14) definition -> . LPAREN DEFINE identifier value_exp RPAREN
    (15) definition -> . LPAREN DEFINE identifier LPAREN arguments RPAREN LPAREN exp RPAREN RPAREN
    (33) value_exp -> . LPAREN operator value_exp args RPAREN
    (34) value_exp -> . func_exp
    (40) value_exp -> . value
    (19) if_stmt -> . LPAREN IF log_exp LPAREN exp RPAREN RPAREN
    (20) if_stmt -> . LPAREN IF log_exp LPAREN exp RPAREN LPAREN exp RPAREN RPAREN
    (21) log_exp -> . value
    (22) log_exp -> . value_exp
    (23) log_exp -> . LPAREN log_operator log_exp log_args RPAREN
    (8) print_exp -> . LPAREN PRINT exp RPAREN
    (35) func_exp -> . LPAREN function args RPAREN
    (41) value -> . identifier
    (42) value -> . NIL
    (43) value -> . number
    (44) value -> . log_val
    (45) value -> . list
    (46) value -> . list_car
    (47) value -> . read_exp
    (13) identifier -> . IDENTIFIER
    (10) number -> . NUM
    (11) log_val -> . TRUE
    (12) log_val -> . FALSE
    (51) list -> . LPAREN CDR identifier RPAREN
    (52) list -> . LPAREN CDR list RPAREN
    (53) list -> . LPAREN CONS args RPAREN
    (54) list -> . STRING
    (48) list_car -> . LPAREN CAR identifier RPAREN
    (49) list_car -> . LPAREN CAR list RPAREN
    (50) list_car -> . LPAREN CAR list_car RPAREN
    (9) read_exp -> . READ

    $end            reduce using rule 1 (program -> exp .)
    LPAREN          shift and go to state 8
    NIL             shift and go to state 12
    IDENTIFIER      shift and go to state 18
    NUM             shift and go to state 19
    TRUE            shift and go to state 20
    FALSE           shift and go to state 21
    STRING          shift and go to state 22
    READ            shift and go to state 23

    exp                            shift and go to state 24
    definition                     shift and go to state 3
    value_exp                      shift and go to state 4
    if_stmt                        shift and go to state 5
    log_exp                        shift and go to state 6
    print_exp                      shift and go to state 7
    identifier                     shift and go to state 9
    func_exp                       shift and go to state 10
    value                          shift and go to state 11
    number                         shift and go to state 13
    log_val                        shift and go to state 14
    list                           shift and go to state 15
    list_car                       shift and go to state 16
    read_exp                       shift and go to state 17

state 3

    (2) exp -> definition .

    LPAREN          reduce using rule 2 (exp -> definition .)
    NIL             reduce using rule 2 (exp -> definition .)
    IDENTIFIER      reduce using rule 2 (exp -> definition .)
    NUM             reduce using rule 2 (exp -> definition .)
    TRUE            reduce using rule 2 (exp -> definition .)
    FALSE           reduce using rule 2 (exp -> definition .)
    STRING          reduce using rule 2 (exp -> definition .)
    READ            reduce using rule 2 (exp -> definition .)
    $end            reduce using rule 2 (exp -> definition .)
    RPAREN          reduce using rule 2 (exp -> definition .)


state 4

    (3) exp -> value_exp .
    (22) log_exp -> value_exp .

  ! reduce/reduce conflict for LPAREN resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for NIL resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for NUM resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for TRUE resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for FALSE resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for STRING resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for READ resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for $end resolved using rule 3 (exp -> value_exp .)
  ! reduce/reduce conflict for RPAREN resolved using rule 3 (exp -> value_exp .)
    LPAREN          reduce using rule 3 (exp -> value_exp .)
    NIL             reduce using rule 3 (exp -> value_exp .)
    IDENTIFIER      reduce using rule 3 (exp -> value_exp .)
    NUM             reduce using rule 3 (exp -> value_exp .)
    TRUE            reduce using rule 3 (exp -> value_exp .)
    FALSE           reduce using rule 3 (exp -> value_exp .)
    STRING          reduce using rule 3 (exp -> value_exp .)
    READ            reduce using rule 3 (exp -> value_exp .)
    $end            reduce using rule 3 (exp -> value_exp .)
    RPAREN          reduce using rule 3 (exp -> value_exp .)

  ! LPAREN          [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! NIL             [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! IDENTIFIER      [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! NUM             [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! TRUE            [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! FALSE           [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! STRING          [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! READ            [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! $end            [ reduce using rule 22 (log_exp -> value_exp .) ]
  ! RPAREN          [ reduce using rule 22 (log_exp -> value_exp .) ]


state 5

    (4) exp -> if_stmt .

    LPAREN          reduce using rule 4 (exp -> if_stmt .)
    NIL             reduce using rule 4 (exp -> if_stmt .)
    IDENTIFIER      reduce using rule 4 (exp -> if_stmt .)
    NUM             reduce using rule 4 (exp -> if_stmt .)
    TRUE            reduce using rule 4 (exp -> if_stmt .)
    FALSE           reduce using rule 4 (exp -> if_stmt .)
    STRING          reduce using rule 4 (exp -> if_stmt .)
    READ            reduce using rule 4 (exp -> if_stmt .)
    $end            reduce using rule 4 (exp -> if_stmt .)
    RPAREN          reduce using rule 4 (exp -> if_stmt .)


state 6

    (5) exp -> log_exp .

    LPAREN          reduce using rule 5 (exp -> log_exp .)
    NIL             reduce using rule 5 (exp -> log_exp .)
    IDENTIFIER      reduce using rule 5 (exp -> log_exp .)
    NUM             reduce using rule 5 (exp -> log_exp .)
    TRUE            reduce using rule 5 (exp -> log_exp .)
    FALSE           reduce using rule 5 (exp -> log_exp .)
    STRING          reduce using rule 5 (exp -> log_exp .)
    READ            reduce using rule 5 (exp -> log_exp .)
    $end            reduce using rule 5 (exp -> log_exp .)
    RPAREN          reduce using rule 5 (exp -> log_exp .)


state 7

    (6) exp -> print_exp .

    LPAREN          reduce using rule 6 (exp -> print_exp .)
    NIL             reduce using rule 6 (exp -> print_exp .)
    IDENTIFIER      reduce using rule 6 (exp -> print_exp .)
    NUM             reduce using rule 6 (exp -> print_exp .)
    TRUE            reduce using rule 6 (exp -> print_exp .)
    FALSE           reduce using rule 6 (exp -> print_exp .)
    STRING          reduce using rule 6 (exp -> print_exp .)
    READ            reduce using rule 6 (exp -> print_exp .)
    $end            reduce using rule 6 (exp -> print_exp .)
    RPAREN          reduce using rule 6 (exp -> print_exp .)


state 8

    (14) definition -> LPAREN . DEFINE identifier value_exp RPAREN
    (15) definition -> LPAREN . DEFINE identifier LPAREN arguments RPAREN LPAREN exp RPAREN RPAREN
    (33) value_exp -> LPAREN . operator value_exp args RPAREN
    (19) if_stmt -> LPAREN . IF log_exp LPAREN exp RPAREN RPAREN
    (20) if_stmt -> LPAREN . IF log_exp LPAREN exp RPAREN LPAREN exp RPAREN RPAREN
    (23) log_exp -> LPAREN . log_operator log_exp log_args RPAREN
    (8) print_exp -> LPAREN . PRINT exp RPAREN
    (35) func_exp -> LPAREN . function args RPAREN
    (51) list -> LPAREN . CDR identifier RPAREN
    (52) list -> LPAREN . CDR list RPAREN
    (53) list -> LPAREN . CONS args RPAREN
    (48) list_car -> LPAREN . CAR identifier RPAREN
    (49) list_car -> LPAREN . CAR list RPAREN
    (50) list_car -> LPAREN . CAR list_car RPAREN
    (55) operator -> . PLUS
    (56) operator -> . MINUS
    (57) operator -> . DIVIDE
    (58) operator -> . MULTIPLY
    (59) operator -> . MOD
    (27) log_operator -> . AND
    (28) log_operator -> . OR
    (29) log_operator -> . NOT
    (30) log_operator -> . EQUAL
    (31) log_operator -> . GT
    (32) log_operator -> . LT
    (36) function -> . identifier
    (13) identifier -> . IDENTIFIER

    DEFINE          shift and go to state 25
    IF              shift and go to state 28
    PRINT           shift and go to state 30
    CDR             shift and go to state 32
    CONS            shift and go to state 33
    CAR             shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    DIVIDE          shift and go to state 37
    MULTIPLY        shift and go to state 38
    MOD             shift and go to state 39
    AND             shift and go to state 40
    OR              shift and go to state 41
    NOT             shift and go to state 42
    EQUAL           shift and go to state 43
    GT              shift and go to state 44
    LT              shift and go to state 45
    IDENTIFIER      shift and go to state 18

    identifier                     shift and go to state 26
    operator                       shift and go to state 27
    log_operator                   shift and go to state 29
    function                       shift and go to state 31

state 9

    (41) value -> identifier .

    LPAREN          reduce using rule 41 (value -> identifier .)
    NIL             reduce using rule 41 (value -> identifier .)
    IDENTIFIER      reduce using rule 41 (value -> identifier .)
    NUM             reduce using rule 41 (value -> identifier .)
    TRUE            reduce using rule 41 (value -> identifier .)
    FALSE           reduce using rule 41 (value -> identifier .)
    STRING          reduce using rule 41 (value -> identifier .)
    READ            reduce using rule 41 (value -> identifier .)
    $end            reduce using rule 41 (value -> identifier .)
    RPAREN          reduce using rule 41 (value -> identifier .)


state 10

    (34) value_exp -> func_exp .

    LPAREN          reduce using rule 34 (value_exp -> func_exp .)
    NIL             reduce using rule 34 (value_exp -> func_exp .)
    IDENTIFIER      reduce using rule 34 (value_exp -> func_exp .)
    NUM             reduce using rule 34 (value_exp -> func_exp .)
    TRUE            reduce using rule 34 (value_exp -> func_exp .)
    FALSE           reduce using rule 34 (value_exp -> func_exp .)
    STRING          reduce using rule 34 (value_exp -> func_exp .)
    READ            reduce using rule 34 (value_exp -> func_exp .)
    $end            reduce using rule 34 (value_exp -> func_exp .)
    RPAREN          reduce using rule 34 (value_exp -> func_exp .)


state 11

    (40) value_exp -> value .
    (21) log_exp -> value .

  ! reduce/reduce conflict for LPAREN resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for NIL resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for NUM resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for TRUE resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for FALSE resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for STRING resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for READ resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for $end resolved using rule 21 (log_exp -> value .)
  ! reduce/reduce conflict for RPAREN resolved using rule 21 (log_exp -> value .)
    LPAREN          reduce using rule 21 (log_exp -> value .)
    NIL             reduce using rule 21 (log_exp -> value .)
    IDENTIFIER      reduce using rule 21 (log_exp -> value .)
    NUM             reduce using rule 21 (log_exp -> value .)
    TRUE            reduce using rule 21 (log_exp -> value .)
    FALSE           reduce using rule 21 (log_exp -> value .)
    STRING          reduce using rule 21 (log_exp -> value .)
    READ            reduce using rule 21 (log_exp -> value .)
    $end            reduce using rule 21 (log_exp -> value .)
    RPAREN          reduce using rule 21 (log_exp -> value .)

  ! LPAREN          [ reduce using rule 40 (value_exp -> value .) ]
  ! NIL             [ reduce using rule 40 (value_exp -> value .) ]
  ! IDENTIFIER      [ reduce using rule 40 (value_exp -> value .) ]
  ! NUM             [ reduce using rule 40 (value_exp -> value .) ]
  ! TRUE            [ reduce using rule 40 (value_exp -> value .) ]
  ! FALSE           [ reduce using rule 40 (value_exp -> value .) ]
  ! STRING          [ reduce using rule 40 (value_exp -> value .) ]
  ! READ            [ reduce using rule 40 (value_exp -> value .) ]
  ! $end            [ reduce using rule 40 (value_exp -> value .) ]
  ! RPAREN          [ reduce using rule 40 (value_exp -> value .) ]


state 12

    (42) value -> NIL .

    LPAREN          reduce using rule 42 (value -> NIL .)
    NIL             reduce using rule 42 (value -> NIL .)
    IDENTIFIER      reduce using rule 42 (value -> NIL .)
    NUM             reduce using rule 42 (value -> NIL .)
    TRUE            reduce using rule 42 (value -> NIL .)
    FALSE           reduce using rule 42 (value -> NIL .)
    STRING          reduce using rule 42 (value -> NIL .)
    READ            reduce using rule 42 (value -> NIL .)
    $end            reduce using rule 42 (value -> NIL .)
    RPAREN          reduce using rule 42 (value -> NIL .)


state 13

    (43) value -> number .

    LPAREN          reduce using rule 43 (value -> number .)
    NIL             reduce using rule 43 (value -> number .)
    IDENTIFIER      reduce using rule 43 (value -> number .)
    NUM             reduce using rule 43 (value -> number .)
    TRUE            reduce using rule 43 (value -> number .)
    FALSE           reduce using rule 43 (value -> number .)
    STRING          reduce using rule 43 (value -> number .)
    READ            reduce using rule 43 (value -> number .)
    $end            reduce using rule 43 (value -> number .)
    RPAREN          reduce using rule 43 (value -> number .)


state 14

    (44) value -> log_val .

    LPAREN          reduce using rule 44 (value -> log_val .)
    NIL             reduce using rule 44 (value -> log_val .)
    IDENTIFIER      reduce using rule 44 (value -> log_val .)
    NUM             reduce using rule 44 (value -> log_val .)
    TRUE            reduce using rule 44 (value -> log_val .)
    FALSE           reduce using rule 44 (value -> log_val .)
    STRING          reduce using rule 44 (value -> log_val .)
    READ            reduce using rule 44 (value -> log_val .)
    $end            reduce using rule 44 (value -> log_val .)
    RPAREN          reduce using rule 44 (value -> log_val .)


state 15

    (45) value -> list .
